# whalerust

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  package.json  postinstall.sh  rollup.config.js  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.config.ts  webpack.parts.js
.cargo/: config.toml
block_dsl/: Cargo.toml
block_dsl/src/: block.pest  lib.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/roam/: mod.rs
public/: index.html
rust/: Cargo.toml
rust/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: App.svelte  helper.ts  index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/db/: file.ts  file_source.ts  indexer.ts  markdown-loader.ts  roam-loader.ts
src/lang/: completion.ts  editor.ts  index.ts  parser.ts  view.ts
src/lang/decorations/: GenericWIdget.ts  consistent_plugin.ts  decoration_helper.ts  emphemeral_plugin.ts  image.ts  list.ts  snippet.ts  table.ts  wikilink.ts
src/lang/decorations/consistent/: ATXHeading.ts  BlockId.ts  HashText.ts  InlineURL.ts  WikiLink.ts  code.ts  debug.ts  list_as_block.ts
src/lang/decorations/ephemeral/: BlockRef.ts  CodeMark.ts  EmphasisMark.ts  HeaderMark.ts  (+4 more)
src/store/: boostrap.ts  core.ts  defaults.ts  io.ts  session_manager.ts
src/styles/: index.scss  main.css  tailwind.css
src/svelte/: Block.svelte  Dialog.svelte  Editor.svelte  Finder.svelte  Header.svelte  Page.svelte
vercel/: README.md  deploy.sh  vercel.json
whale_rust_wasm/: Cargo.toml
whale_rust_wasm/src/: lib.rs
