[package]
name = "whale_rust_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wasm-bindgen = { version ="0.2", features = ["serde-serialize"] }
common = { path = "../common" }
block_dsl = { path = "../block_dsl" }
serde_json = "1"
log = "0.4.14"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]

